# rufus-linux

./: .gitignore  .gitmodules  LICENSE.txt  README-ja.md  README.md  make-appimage.sh  meson.build  meson_options.txt  rufus-linux.sh
po/: POTFILES.in  ja.po  meson.build
res/: org.rufus.linux.policy
src/: badblocks.c  drive.c  format.c  hash.c  i18n.c  iso.c  iso_extract.c  iso_extract_stub.c  log.c  main.c  main.cpp  mkfs.c  part.c  privops.c  rufus.h  settings.c  ui.c  ui.cpp  util.c  worker.c  worker.cpp  worker.hpp  wue.c
